--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ p {
 	padding: 5px;
 	font-size: 20px;
 }
+.about {
+	margin: 5px;
+	padding: 0;
+	font-size: 25px;
+	background-color: #adf7ff;
+}
 div {
 	margin: 5px 50px;
 	padding: 5px;
